--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -420,9 +420,9 @@
                 android:orientation="horizontal"></LinearLayout>
 
             <Button
-                android:id="@+id/button9"
+                android:id="@+id/buttonsign"
                 android:layout_width="0dp"
-                android:layout_height="34dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:background="@drawable/signupbtn"
                 android:onClick="signUp"
